--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Wenjie Wu (吴文杰)"
-  avatar           : "images/profile.jpg"
+  avatar           : "images/profile.JPG"
   bio              : "Shanghai Jiao Tong University (SJTU)"
   location         : "Shanghai, China"
   employer         :
