--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Wenjie Wu"
-description              : "Second-year graduate student majoring in Control Science and Technology, Shanghai Jiao Tong University"
+description              : "Third-year graduate student majoring in Control Science and Technology, Shanghai Jiao Tong University"
 repository               : "Jay-9912/Jay-9912.github.io"
 google_scholar_stats_use_cdn : true
 
